update regional analysis

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -3355,7 +3355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -3787,7 +3787,7 @@
        "       'Uruguay', 'Vietnam'], dtype=object)"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3826,7 +3826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3856,7 +3856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -4068,7 +4068,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4092,7 +4092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -4425,7 +4425,7 @@
        "18                            Léopold 7                       7 Léopold     1  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4519,7 +4519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -4552,12 +4552,9 @@
        "      <th>popular_beers_name</th>\n",
        "      <th>popular_beers_name_wout_brewery</th>\n",
        "      <th>rank</th>\n",
-       "      <th>popular_styles_x</th>\n",
-       "      <th>counts_pop_styles_x</th>\n",
-       "      <th>rating_pop_styles_x</th>\n",
-       "      <th>popular_styles_y</th>\n",
-       "      <th>counts_pop_styles_y</th>\n",
-       "      <th>rating_pop_styles_y</th>\n",
+       "      <th>popular_styles</th>\n",
+       "      <th>counts_pop_styles</th>\n",
+       "      <th>rating_pop_styles</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -4572,9 +4569,6 @@
        "      <td>Trappistes Rochefort 10</td>\n",
        "      <td>Trappistes 10</td>\n",
        "      <td>1</td>\n",
-       "      <td>Classic English-Style Pale Ale</td>\n",
-       "      <td>1674.0</td>\n",
-       "      <td>0.633333</td>\n",
        "      <td>Classic English-Style Pale Ale</td>\n",
        "      <td>1674.0</td>\n",
        "      <td>0.633333</td>\n",
@@ -4593,9 +4587,6 @@
        "      <td>Imperial India Pale Ale\\r\\n</td>\n",
        "      <td>739.0</td>\n",
        "      <td>0.631250</td>\n",
-       "      <td>Imperial India Pale Ale\\r\\n</td>\n",
-       "      <td>739.0</td>\n",
-       "      <td>0.631250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -4608,9 +4599,6 @@
        "      <td>Brooklyn Black Chocolate Stout</td>\n",
        "      <td>Chocolate Black Stout</td>\n",
        "      <td>3</td>\n",
-       "      <td>American Imperial Stout</td>\n",
-       "      <td>863.0</td>\n",
-       "      <td>0.555556</td>\n",
        "      <td>American Imperial Stout</td>\n",
        "      <td>863.0</td>\n",
        "      <td>0.555556</td>\n",
@@ -4629,9 +4617,6 @@
        "      <td>Classic English-Style Pale Ale</td>\n",
        "      <td>15.0</td>\n",
        "      <td>0.666667</td>\n",
-       "      <td>Classic English-Style Pale Ale</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>0.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -4644,9 +4629,6 @@
        "      <td>Sul Americana</td>\n",
        "      <td>Americana Sul</td>\n",
        "      <td>2</td>\n",
-       "      <td>Belgian-Style Tripel</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.595000</td>\n",
        "      <td>Belgian-Style Tripel</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.595000</td>\n",
@@ -4665,9 +4647,6 @@
        "      <td>Imperial India Pale Ale</td>\n",
        "      <td>14.0</td>\n",
        "      <td>0.488889</td>\n",
-       "      <td>Imperial India Pale Ale</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>0.488889</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -4680,9 +4659,6 @@
        "      <td>Trappistes Rochefort 10</td>\n",
        "      <td>Trappistes 10</td>\n",
        "      <td>1</td>\n",
-       "      <td>Strong Ale</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>0.715000</td>\n",
        "      <td>Strong Ale</td>\n",
        "      <td>77.0</td>\n",
        "      <td>0.715000</td>\n",
@@ -4701,9 +4677,6 @@
        "      <td>Belgian-Style Saison</td>\n",
        "      <td>372.0</td>\n",
        "      <td>0.646237</td>\n",
-       "      <td>Belgian-Style Saison</td>\n",
-       "      <td>372.0</td>\n",
-       "      <td>0.646237</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -4716,9 +4689,6 @@
        "      <td>Delirium Tremens</td>\n",
        "      <td>Delirium Tremens</td>\n",
        "      <td>3</td>\n",
-       "      <td>Scottish-Style Light Ale</td>\n",
-       "      <td>231.0</td>\n",
-       "      <td>0.611111</td>\n",
        "      <td>Scottish-Style Light Ale</td>\n",
        "      <td>231.0</td>\n",
        "      <td>0.611111</td>\n",
@@ -4737,9 +4707,6 @@
        "      <td>Classic English-Style Pale Ale</td>\n",
        "      <td>372.0</td>\n",
        "      <td>0.700425</td>\n",
-       "      <td>Classic English-Style Pale Ale</td>\n",
-       "      <td>372.0</td>\n",
-       "      <td>0.700425</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -4752,9 +4719,6 @@
        "      <td>Andechser Doppelbock Dunkel</td>\n",
        "      <td>Andechser Doppelbock Dunkel</td>\n",
        "      <td>2</td>\n",
-       "      <td>American IPA</td>\n",
-       "      <td>197.0</td>\n",
-       "      <td>0.612500</td>\n",
        "      <td>American IPA</td>\n",
        "      <td>197.0</td>\n",
        "      <td>0.612500</td>\n",
@@ -4773,9 +4737,6 @@
        "      <td>English-Style Bitter</td>\n",
        "      <td>279.0</td>\n",
        "      <td>0.527686</td>\n",
-       "      <td>English-Style Bitter</td>\n",
-       "      <td>279.0</td>\n",
-       "      <td>0.527686</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -4788,9 +4749,6 @@
        "      <td>Weihenstephaner Festbier</td>\n",
        "      <td>Festbier Weihenstephaner</td>\n",
        "      <td>1</td>\n",
-       "      <td>American Pale Ale</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.777778</td>\n",
        "      <td>American Pale Ale</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.777778</td>\n",
@@ -4809,9 +4767,6 @@
        "      <td>Scotch Ale/Wee Heavy</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.720000</td>\n",
-       "      <td>Scotch Ale/Wee Heavy</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.720000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -4824,9 +4779,6 @@
        "      <td>Grand Ridge Moonshine</td>\n",
        "      <td>Moonshine</td>\n",
        "      <td>3</td>\n",
-       "      <td>Classic English-Style Pale Ale</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.666667</td>\n",
        "      <td>Classic English-Style Pale Ale</td>\n",
        "      <td>5.0</td>\n",
        "      <td>0.666667</td>\n",
@@ -4845,9 +4797,6 @@
        "      <td>American Pale Ale</td>\n",
        "      <td>6.0</td>\n",
        "      <td>0.722917</td>\n",
-       "      <td>American Pale Ale</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.722917</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -4860,9 +4809,6 @@
        "      <td>Lervig / Boneyard Double Black Tide</td>\n",
        "      <td>Tide Double Black Boneyard</td>\n",
        "      <td>2</td>\n",
-       "      <td>American IPA</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.600833</td>\n",
        "      <td>American IPA</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0.600833</td>\n",
@@ -4881,9 +4827,6 @@
        "      <td>Bohemian-Style Pilsener</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0.600000</td>\n",
-       "      <td>Bohemian-Style Pilsener</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.600000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -4896,9 +4839,6 @@
        "      <td>Léopold 7</td>\n",
        "      <td>7 Léopold</td>\n",
        "      <td>1</td>\n",
-       "      <td>Belgian-Style Blonde Ale</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.955556</td>\n",
        "      <td>Belgian-Style Blonde Ale</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.955556</td>\n",
@@ -4971,50 +4911,29 @@
        "17           Grand Ridge Mirboo Madness                  Mirboo Madness     3   \n",
        "18                            Léopold 7                       7 Léopold     1   \n",
        "\n",
-       "                  popular_styles_x  counts_pop_styles_x  rating_pop_styles_x  \\\n",
-       "0   Classic English-Style Pale Ale               1674.0             0.633333   \n",
-       "1      Imperial India Pale Ale\\r\\n                739.0             0.631250   \n",
-       "2          American Imperial Stout                863.0             0.555556   \n",
-       "3   Classic English-Style Pale Ale                 15.0             0.666667   \n",
-       "4             Belgian-Style Tripel                  2.0             0.595000   \n",
-       "5          Imperial India Pale Ale                 14.0             0.488889   \n",
-       "6                       Strong Ale                 77.0             0.715000   \n",
-       "7             Belgian-Style Saison                372.0             0.646237   \n",
-       "8         Scottish-Style Light Ale                231.0             0.611111   \n",
-       "9   Classic English-Style Pale Ale                372.0             0.700425   \n",
-       "10                    American IPA                197.0             0.612500   \n",
-       "11            English-Style Bitter                279.0             0.527686   \n",
-       "12               American Pale Ale                  4.0             0.777778   \n",
-       "13            Scotch Ale/Wee Heavy                  2.0             0.720000   \n",
-       "14  Classic English-Style Pale Ale                  5.0             0.666667   \n",
-       "15               American Pale Ale                  6.0             0.722917   \n",
-       "16                    American IPA                  3.0             0.600833   \n",
-       "17         Bohemian-Style Pilsener                  3.0             0.600000   \n",
-       "18        Belgian-Style Blonde Ale                  1.0             0.955556   \n",
-       "\n",
-       "                  popular_styles_y  counts_pop_styles_y  rating_pop_styles_y  \n",
-       "0   Classic English-Style Pale Ale               1674.0             0.633333  \n",
-       "1      Imperial India Pale Ale\\r\\n                739.0             0.631250  \n",
-       "2          American Imperial Stout                863.0             0.555556  \n",
-       "3   Classic English-Style Pale Ale                 15.0             0.666667  \n",
-       "4             Belgian-Style Tripel                  2.0             0.595000  \n",
-       "5          Imperial India Pale Ale                 14.0             0.488889  \n",
-       "6                       Strong Ale                 77.0             0.715000  \n",
-       "7             Belgian-Style Saison                372.0             0.646237  \n",
-       "8         Scottish-Style Light Ale                231.0             0.611111  \n",
-       "9   Classic English-Style Pale Ale                372.0             0.700425  \n",
-       "10                    American IPA                197.0             0.612500  \n",
-       "11            English-Style Bitter                279.0             0.527686  \n",
-       "12               American Pale Ale                  4.0             0.777778  \n",
-       "13            Scotch Ale/Wee Heavy                  2.0             0.720000  \n",
-       "14  Classic English-Style Pale Ale                  5.0             0.666667  \n",
-       "15               American Pale Ale                  6.0             0.722917  \n",
-       "16                    American IPA                  3.0             0.600833  \n",
-       "17         Bohemian-Style Pilsener                  3.0             0.600000  \n",
-       "18        Belgian-Style Blonde Ale                  1.0             0.955556  "
+       "                    popular_styles  counts_pop_styles  rating_pop_styles  \n",
+       "0   Classic English-Style Pale Ale             1674.0           0.633333  \n",
+       "1      Imperial India Pale Ale\\r\\n              739.0           0.631250  \n",
+       "2          American Imperial Stout              863.0           0.555556  \n",
+       "3   Classic English-Style Pale Ale               15.0           0.666667  \n",
+       "4             Belgian-Style Tripel                2.0           0.595000  \n",
+       "5          Imperial India Pale Ale               14.0           0.488889  \n",
+       "6                       Strong Ale               77.0           0.715000  \n",
+       "7             Belgian-Style Saison              372.0           0.646237  \n",
+       "8         Scottish-Style Light Ale              231.0           0.611111  \n",
+       "9   Classic English-Style Pale Ale              372.0           0.700425  \n",
+       "10                    American IPA              197.0           0.612500  \n",
+       "11            English-Style Bitter              279.0           0.527686  \n",
+       "12               American Pale Ale                4.0           0.777778  \n",
+       "13            Scotch Ale/Wee Heavy                2.0           0.720000  \n",
+       "14  Classic English-Style Pale Ale                5.0           0.666667  \n",
+       "15               American Pale Ale                6.0           0.722917  \n",
+       "16                    American IPA                3.0           0.600833  \n",
+       "17         Bohemian-Style Pilsener                3.0           0.600000  \n",
+       "18        Belgian-Style Blonde Ale                1.0           0.955556  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5078,7 +4997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
