update main logic

--- a/main_logic.ipynb
+++ b/main_logic.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\94042\\AppData\\Roaming\\Python\\Python39\\site-packages\\fuzzywuzzy\\fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
+      "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -35,7 +44,10 @@
     "\n",
     "    - [2.3.2 Obtain vector representations for each text features](####Obtain-vector-representations-for-each-text-features)\n",
     "\n",
-    "- [2.4 Calculate Style Similarities](###Calculate-Style-Similarities)"
+    "- [2.4 Calculate Style Similarities](###Calculate-Style-Similarities)\n",
+    "\n",
+    "[5. Beer Recommendation ](##Beer-Recommendation)\n",
+    "- [5.1 Regional Analysis](##Regional-Analysis)"
    ]
   },
   {
@@ -669,6 +681,392 @@
     "\n",
     "# Save to a CSV file\n",
     "similarity_df.to_csv('data/similarity_matrix.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Beer Recommendation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regional Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\94042\\AppData\\Local\\Temp\\ipykernel_611080\\2890159596.py:2: DtypeWarning: Columns (0,1,2,3,4,5,8,10,11,12,13,15,16,17,18,19,20,23,25,26,27,29,30,31,32) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  beers = pd.read_csv('data/m_beers.csv')\n",
+      "C:\\Users\\94042\\AppData\\Local\\Temp\\ipykernel_611080\\2890159596.py:3: DtypeWarning: Columns (0,1,2,3,5,7,8,9,10,11,13,17,18,19,20,22,24,25,26,27,29,31) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  ratings = pd.read_csv('data/m_ratings.csv')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load and preprocess the data\n",
+    "beers = pd.read_csv('data/m_beers.csv')\n",
+    "ratings = pd.read_csv('data/m_ratings.csv')\n",
+    "users = pd.read_csv('data/m_users_approx.csv')\n",
+    "breweries = pd.read_csv('data/m_breweries.csv')\n",
+    "\n",
+    "beers_rb, beers_ba = split_matched_data(beers)\n",
+    "users_rb, users_ba = split_matched_data(users)\n",
+    "ratings_rb, ratings_ba = split_matched_data(ratings)\n",
+    "breweries_rb, breweries_ba = split_matched_data(breweries)\n",
+    "\n",
+    "ratings_ba.dropna(inplace=True)\n",
+    "ratings_ba.reset_index(drop=True)\n",
+    "\n",
+    "convert_features=['abv', 'appearance', 'aroma', 'overall', 'palate', 'rating', 'taste']\n",
+    "ratings_rb[convert_features] = ratings_rb[convert_features].apply(pd.to_numeric, errors = 'coerce')\n",
+    "ratings_ba[convert_features] = ratings_ba[convert_features].apply(pd.to_numeric, errors = 'coerce')\n",
+    "\n",
+    "# scaling th features\n",
+    "ratings_rb_with_convert_features = ratings_rb[convert_features]\n",
+    "ratings_ba_with_convert_features = ratings_ba[convert_features]\n",
+    "ratings_rb[convert_features] = (\n",
+    "    ratings_rb_with_convert_features - ratings_rb_with_convert_features.min()\n",
+    ") / (ratings_rb_with_convert_features.max() - ratings_rb_with_convert_features.min())\n",
+    "ratings_ba[convert_features] = (\n",
+    "    ratings_ba_with_convert_features - ratings_ba_with_convert_features.min()\n",
+    ") / (ratings_ba_with_convert_features.max() - ratings_ba_with_convert_features.min())\n",
+    "\n",
+    "users_loc_ba = users_ba.groupby('location').size()\n",
+    "users_loc_rb = users_rb.groupby('location').size()\n",
+    "users_loc_ba_US = users_loc_ba[users_loc_ba.index.str.contains('United States')]\n",
+    "users_loc_ba_nonUS = users_loc_ba[~users_loc_ba.index.str.contains('United States')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# match beer_id to enable cross-platform analysis\n",
+    "# assign beers df a new column to 'ba.16' with the first value being 'matched_beer_id'\n",
+    "beers['ba.16'] = beers['ba.5']\n",
+    "# change the 1st value of 'ba.16' to 'matched_beer_id'\n",
+    "beers.loc[0, 'ba.16'] = 'matched_beer_id'\n",
+    "beers['rb.15'] = beers['ba.16']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Argentina', 'Australia', 'Austria', 'Belarus', 'Belgium',\n",
+       "       'Belize', 'Brazil', 'Bulgaria', 'Canada', 'Chile', 'China',\n",
+       "       'Croatia', 'Czech Republic', 'Denmark', 'El Salvador', 'England',\n",
+       "       'Estonia', 'Faroe Islands', 'Finland', 'France', 'Germany',\n",
+       "       'Greece', 'Hungary', 'India', 'Ireland', 'Israel', 'Italy',\n",
+       "       'Japan', 'Jersey', 'Lebanon', 'Lithuania', 'Malaysia', 'Mauritius',\n",
+       "       'Mexico', 'Moldova', 'Netherlands', 'Norway', 'Panama', 'Paraguay',\n",
+       "       'Peru', 'Philippines', 'Poland', 'Portugal', 'Puerto Rico',\n",
+       "       'Romania', 'Russia', 'Scotland', 'Serbia', 'Singapore',\n",
+       "       'Slovak Republic', 'Slovenia', 'South Africa', 'Spain', 'Sweden',\n",
+       "       'Switzerland', 'Taiwan', 'Thailand', 'Turkey', 'Ukraine',\n",
+       "       'Uruguay', 'Vietnam'], dtype=object)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Based on previous analysis of features in Users, we recognize that most of the users are from the US. Here we catergorize other user locations into broader regions.\n",
+    "\n",
+    "# assign beers without a matched_beer_id to their original beer_id, and ensure same data type\n",
+    "beers_rb, beers_ba = split_matched_data(beers)\n",
+    "beers_rb['matched_beer_id'].fillna(beers_rb['beer_id'], inplace=True)\n",
+    "beers_rb['matched_beer_id'] = beers_rb['matched_beer_id'].astype(str)\n",
+    "beers_ba['matched_beer_id'].fillna(beers_ba['beer_id'], inplace=True)\n",
+    "beers_ba['matched_beer_id'] = beers_ba['matched_beer_id'].astype(str)\n",
+    "beers_rb['beer_id'] = beers_rb['beer_id'].astype(str)\n",
+    "beers_ba['beer_id'] = beers_ba['beer_id'].astype(str)\n",
+    "\n",
+    "\n",
+    "# merge user location with ratings, ensure same data type\n",
+    "ratings_rb['user_id'] = ratings_rb['user_id'].astype(str)\n",
+    "ratings_ba['user_id'] = ratings_ba['user_id'].astype(str)\n",
+    "ratings_rb['beer_id'] = ratings_rb['beer_id'].astype(str)\n",
+    "ratings_ba['beer_id'] = ratings_ba['beer_id'].astype(str)\n",
+    "users_rb['user_id'] = users_rb['user_id'].astype(str)\n",
+    "users_ba['user_id'] = users_ba['user_id'].astype(str)\n",
+    "\n",
+    "# get matched_beer_id and beer_wout_brewery_name for ratings\n",
+    "ratings_rb_name = ratings_rb.merge(beers_rb[['beer_id','beer_wout_brewery_name','matched_beer_id']], on =\"beer_id\" ,how = \"left\")\n",
+    "ratings_rb_name['beer_wout_brewery_name'].fillna(ratings_rb_name['beer_name'], inplace=True)\n",
+    "ratings_rb_name\n",
+    "ratings_ba_name = ratings_ba.merge(beers_ba[['beer_id','beer_wout_brewery_name','matched_beer_id']], on =\"beer_id\" ,how = \"left\")\n",
+    "ratings_ba_name['beer_wout_brewery_name'].fillna(ratings_ba_name['beer_name'], inplace=True)\n",
+    "ratings_users_ba = pd.merge(ratings_ba_name, users_ba, on=['user_id', 'user_name'])\n",
+    "ratings_users_rb = pd.merge(ratings_rb_name, users_rb, on=['user_id', 'user_name'])\n",
+    "\n",
+    "#get non_US locations\n",
+    "non_US_locations = users_loc_ba_nonUS.reset_index()\n",
+    "non_US_locations.columns = ['location', 'count']\n",
+    "# get unique values of non_US_locations\n",
+    "non_US_locations[\"location\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>abv</th>\n",
+       "      <th>appearance</th>\n",
+       "      <th>aroma</th>\n",
+       "      <th>beer_id</th>\n",
+       "      <th>beer_name</th>\n",
+       "      <th>brewery_id</th>\n",
+       "      <th>brewery_name</th>\n",
+       "      <th>date</th>\n",
+       "      <th>overall</th>\n",
+       "      <th>palate</th>\n",
+       "      <th>...</th>\n",
+       "      <th>user_name</th>\n",
+       "      <th>beer_wout_brewery_name</th>\n",
+       "      <th>matched_beer_id</th>\n",
+       "      <th>joined</th>\n",
+       "      <th>location</th>\n",
+       "      <th>nbr_ratings</th>\n",
+       "      <th>nbr_reviews</th>\n",
+       "      <th>user_name_lower</th>\n",
+       "      <th>country</th>\n",
+       "      <th>region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.280519</td>\n",
+       "      <td>0.875</td>\n",
+       "      <td>0.875</td>\n",
+       "      <td>645</td>\n",
+       "      <td>Trappistes Rochefort 10</td>\n",
+       "      <td>207</td>\n",
+       "      <td>Brasserie de Rochefort</td>\n",
+       "      <td>1324810800</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.875</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Erzengel</td>\n",
+       "      <td>Trappistes 10</td>\n",
+       "      <td>645</td>\n",
+       "      <td>1220868000.0</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>erzengel</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.116883</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>57911</td>\n",
+       "      <td>Cantillon Tyrnilambic Baie D’Argousier Lambic</td>\n",
+       "      <td>388</td>\n",
+       "      <td>Brasserie Cantillon</td>\n",
+       "      <td>1344074400</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>...</td>\n",
+       "      <td>tiong</td>\n",
+       "      <td>Baie Tyrnilambic D’Argousier Lambic</td>\n",
+       "      <td>57911</td>\n",
+       "      <td>1309946400.0</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>tiong</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>Europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.116883</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>57913</td>\n",
+       "      <td>Cantillon Pikkulinnun Viskilambic</td>\n",
+       "      <td>388</td>\n",
+       "      <td>Brasserie Cantillon</td>\n",
+       "      <td>1344074400</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>...</td>\n",
+       "      <td>tiong</td>\n",
+       "      <td>Viskilambic Pikkulinnun</td>\n",
+       "      <td>57913</td>\n",
+       "      <td>1309946400.0</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>tiong</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>Europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.142857</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>81125</td>\n",
+       "      <td>Drie Fonteinen Oude Geuze - Armand &amp; Tommy</td>\n",
+       "      <td>2216</td>\n",
+       "      <td>Brouwerij 3 Fonteinen</td>\n",
+       "      <td>1346234400</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>...</td>\n",
+       "      <td>tiong</td>\n",
+       "      <td>Oude Geuze Armand Tommy Drie</td>\n",
+       "      <td>81125</td>\n",
+       "      <td>1309946400.0</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>tiong</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>Europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.116883</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>67932</td>\n",
+       "      <td>Cantillon Olutravintola Pikkulintu</td>\n",
+       "      <td>388</td>\n",
+       "      <td>Brasserie Cantillon</td>\n",
+       "      <td>1344074400</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.875</td>\n",
+       "      <td>...</td>\n",
+       "      <td>tiong</td>\n",
+       "      <td>Olutravintola Pikkulintu</td>\n",
+       "      <td>67932</td>\n",
+       "      <td>1309946400.0</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>tiong</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>Europe</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "0       abv  appearance  aroma beer_id  \\\n",
+       "0  0.280519       0.875  0.875     645   \n",
+       "1  0.116883       0.625  0.625   57911   \n",
+       "2  0.116883       0.750  0.625   57913   \n",
+       "3  0.142857       0.750  0.750   81125   \n",
+       "4  0.116883       0.750  0.750   67932   \n",
+       "\n",
+       "0                                      beer_name brewery_id  \\\n",
+       "0                        Trappistes Rochefort 10        207   \n",
+       "1  Cantillon Tyrnilambic Baie D’Argousier Lambic        388   \n",
+       "2              Cantillon Pikkulinnun Viskilambic        388   \n",
+       "3     Drie Fonteinen Oude Geuze - Armand & Tommy       2216   \n",
+       "4             Cantillon Olutravintola Pikkulintu        388   \n",
+       "\n",
+       "0            brewery_name        date  overall  palate  ...  user_name  \\\n",
+       "0  Brasserie de Rochefort  1324810800     1.00   0.875  ...   Erzengel   \n",
+       "1     Brasserie Cantillon  1344074400     0.75   0.750  ...      tiong   \n",
+       "2     Brasserie Cantillon  1344074400     0.75   0.750  ...      tiong   \n",
+       "3   Brouwerij 3 Fonteinen  1346234400     0.75   0.750  ...      tiong   \n",
+       "4     Brasserie Cantillon  1344074400     0.75   0.875  ...      tiong   \n",
+       "\n",
+       "0               beer_wout_brewery_name matched_beer_id        joined location  \\\n",
+       "0                        Trappistes 10             645  1220868000.0  Germany   \n",
+       "1  Baie Tyrnilambic D’Argousier Lambic           57911  1309946400.0  Finland   \n",
+       "2              Viskilambic Pikkulinnun           57913  1309946400.0  Finland   \n",
+       "3         Oude Geuze Armand Tommy Drie           81125  1309946400.0  Finland   \n",
+       "4             Olutravintola Pikkulintu           67932  1309946400.0  Finland   \n",
+       "\n",
+       "0 nbr_ratings nbr_reviews user_name_lower  country  region  \n",
+       "0           6           6        erzengel  Germany  Europe  \n",
+       "1           8           8           tiong  Finland  Europe  \n",
+       "2           8           8           tiong  Finland  Europe  \n",
+       "3           8           8           tiong  Finland  Europe  \n",
+       "4           8           8           tiong  Finland  Europe  \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extract the country from each location\n",
+    "ratings_users_ba['country'] = ratings_users_ba['location'].apply(extract_country)\n",
+    "ratings_users_rb['country'] = ratings_users_rb['location'].apply(extract_country)\n",
+    "# Map each country to its world area\n",
+    "ratings_users_ba['region'] = ratings_users_ba['country'].map(world_area_mapping)\n",
+    "ratings_users_rb['region'] = ratings_users_rb['country'].map(world_area_mapping)\n",
+    "ratings_users_ba.head()  # Display the first few rows to check the results"
    ]
   }
  ],
