--- a/main_logic.ipynb
+++ b/main_logic.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "- [1.1 Convert Data into Json Format](###Convert-Data-into-Json-Format)\n",
     "\n",
-    "[2. K-means Clustering](##Clustering-for-Popularity-and-User-Taste-Preference)\n",
+    "[2. K-means Clustering](##Clustering-and-User-Taste-Preference)\n",
     "\n",
     "- [2.1 Data preparation](###Data-Preparation)\n",
     "\n",
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clustering for Popularity and User Taste Preference"
+    "## Clustering and User Taste Preference"
    ]
   },
   {
@@ -278,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# construct new dataset for plottig:\n",
+    "# construct new dataset for plotting:\n",
     "labels = kmeans.get_labels()\n",
     "labeled_data = features_all.copy()\n",
     "labeled_data = labeled_data.reset_index()\n",
